fixed navbar collapse mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,16 +1,79 @@
 @import "bootstrap-sprockets";
-@import "bootswatch/lumen/variables";
 @import "bootstrap";
+@import "bootswatch/lumen/variables";
 @import "bootswatch/lumen/bootswatch";
 @import "font-awesome";
 
 @media (max-width: 768px) {
+  .fa-leaf {
+    color: #FF7D63;
+    font-size: 30px;
+    margin-right: 5px;
+  }
+
+  #biz-name {
+    font-size: 18px;
+    color: #444444;
+    font-weight: 600;
+    font-family: sans-serif;
+    display: inline;
+    vertical-align: 9px;
+  }
+
+  .navbar-default {
+    background-color: #fff;
+  }
+
+  .hero-text {
+    margin: 0 0 30px 0 !important;
+    text-align: center;
+  }
+
+  .pitch-text p {
+    text-align: center;
+    font-weight: 500;
+    color: #CFECF9;
+    margin: 20px 10px;
+  }
+
+  .jumbotron-hero {
+    background-color: #119ee0;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 10px;
+    border: none;
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+
+  .center-icon {
+    margin-top: 30px;
+  }
   .disease-nested input {
     margin: 15px 0;
   }
 }
 
 @media (min-width: 769px) {
+
+  #biz-name {
+    color: #444444;
+    font-size: 23px;
+    font-weight: 600;
+    font-family: sans-serif;
+    display: inline;
+    vertical-align: 9px;
+  }
+
+  .fa-leaf {
+    color: #FF7D63;
+    font-size: 40px;
+    margin-right: 10px;
+  }
+
+  .navbar-default {
+    background-color: #fff;
+  }
 
   .navbar-default .navbar-nav > li > a {
     color: #333;
@@ -23,6 +86,28 @@
 
   ul.nav.navbar-nav.navbar-right {
     margin-top: 9px;
+  }
+
+  .jumbotron-hero {
+    background-color: #119ee0;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 60px;
+    border: none;
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+
+  .hero-text {
+    margin: 50px 0 60px 0;
+    text-align: center;
+  }
+
+  .pitch-text p {
+    text-align: center;
+    padding: 40px 120px 10px 120px;
+    font-weight: 500;
+    color: #CFECF9;
   }
 
   .desktop-header-padding {
@@ -95,6 +180,17 @@
 
   #client_alcohol_type {
     width: 148px;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 884px) {
+
+  .navbar-default .navbar-nav > li > a {
+    font-size: 14px;
+    padding-left: 7px;
+    padding-right: 7px;
+    color: #333;
   }
 }
 
@@ -215,26 +311,6 @@
   display: block;
 }
 
-.navbar-default {
-  background-color: #fff;
-  height: 75px;
-}
-
-#biz-name {
-  color: #444444;
-  font-size: 23px;
-  font-weight: 600;
-  font-family: sans-serif;
-  display: inline;
-  vertical-align: 9px;
-}
-
-.fa-leaf {
-  color: #FF7D63;
-  font-size: 40px;
-  margin-right: 10px;
-}
-
 .fa-pagelines, .fa-heart, .fa-sun-o {
   font-size: 80px;
   vertical-align: middle;
@@ -278,11 +354,6 @@
   font-weight: 600;
 }
 
-.hero-text {
-  margin: 50px 0 60px 0;
-  text-align: center;
-}
-
 .hero-text h2 {
   font-weight: 700;
   color: #444444;
@@ -294,27 +365,10 @@
   color: #d8d8d8;
 }
 
-.jumbotron-hero {
-  background-color: #119ee0;
-  color: #fff;
-  text-align: center;
-  margin-bottom: 60px;
-  border: none;
-  padding-top: 35px;
-  padding-bottom: 35px;
-}
-
 .jumbotron-hero h3 {
   color: #fff;
   font-weight: 700;
   font-size: 28px;
-}
-
-.pitch-text p {
-  text-align: center;
-  padding: 40px 120px 10px 120px;
-  font-weight: 500;
-  color: #CFECF9;
 }
 
 .footer {
